2006-01-20  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (raw_input): I _think_ I got the pasting of
	multiline code with autoindent on working.  But I am really not
	sure, so this needs more testing.  Will commit a debug-enabled
	version for now, while I test it some more, so that Ville and
	others may also catch any problems.  Also made
	self.indent_current_str() a method, to ensure that there's no
	chance of the indent space count and the corresponding string
	falling out of sync.  All code needing the string should just call
	the method.

2006-01-18  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_edit): fix check for when users don't
	save their output files, the try/except was in the wrong section.

2006-01-17  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_run): fix __file__ global missing from
	script's namespace when executed via %run.  After a report by
	Vivian.

	* IPython/Debugger.py (Pdb.__init__): Fix breakage with '%run -d'
	when using python 2.4.  The parent constructor changed in 2.4, and
	we need to track it directly (we can't call it, as it messes up
	readline and tab-completion inside our pdb would stop working).
	After a bug report by R. Bernstein <rocky-AT-panix.com>.

2006-01-16  Ville Vainio  <vivainio@gmail.com>

	* Ipython/magic.py:Reverted back to old %edit functionality 
	that returns file contents on exit.
	
	* IPython/path.py: Added Jason Orendorff's "path" module to 
	IPython tree, http://www.jorendorff.com/articles/python/path/.
	You can get path objects conveniently through %sc, and !!, e.g.:
	 sc files=ls
	 for p in files.paths: # or files.p
	     print p,p.mtime
	
	* Ipython/iplib.py:"," and ";" autoquoting-upon-autocall 
	now work again without considering the exclusion regexp - 
	hence, things like ',foo my/path' turn to 'foo("my/path")' 
	instead of syntax error.
	

2006-01-14  Ville Vainio  <vivainio@gmail.com>
